@@ -43,6 +43,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.11.2</version>
+        </dependency>
         
         <!-- Test dependencies -->
         <dependency>
@@ -87,6 +92,20 @@
                     <argLine>
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-exports org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED
+                        --add-exports org.fxmisc.richtext/org.fxmisc.richtext.model=ALL-UNNAMED
+                        --add-exports javafx.controls/javafx.scene.control=ALL-UNNAMED
+                        --add-exports javafx.base/javafx.collections=ALL-UNNAMED
+                        --add-exports javafx.base/javafx.beans=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED
+                        --add-opens javafx.base/javafx.collections=ALL-UNNAMED
+                        --add-opens javafx.base/javafx.beans=ALL-UNNAMED
+                        --add-opens org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED
+                        --add-opens org.fxmisc.richtext/org.fxmisc.richtext.model=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -105,6 +124,16 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>media.samson.jamplate.HelloApplication</mainClass>
+                    <options>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>org.fxmisc.richtext/org.fxmisc.richtext.model=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
